--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -15,6 +15,10 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QTXFW9W4Z0"></script>
+    <script src="{{ url_for('static', filename='js/gtag.js') }}"></script>
+
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
